Update security configuration and email service